--- a/quizcss101.html
+++ b/quizcss101.html
@@ -20,12 +20,13 @@
       1. Convert the ul in the navigation element into a series of horizontal links with # as the href value, without a bullets, centered vertically, and have some space between them horizontally.
       2. Ensure that the navigation is semantically marked as such (i.e. wrap it in the correct HTML tag)
     -->
-    <ul>
-      <li><a href="#">Home</a></li>
-      <li><a href="#">Profile</a></li>
-      <li><a href="#">Blog</a></li>
-    </ul>
-
+    <nav>
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Profile</a></li>
+        <li><a href="#">Blog</a></li>
+      </ul>
+    </nav>
   </header>
 
   <!--
@@ -33,50 +34,51 @@
     2. Any text inside an element with a class of "active" should be colored yellow.
     3. Section elements should be contained within an article element.
   -->
-  <section>
-    <div class="month-list">
-      <ul>
-        <li>
-          <a href="#">January</a>
-          <span class="disabled">My favorite month</span>
-        </li>
-        <li>
-          <a href="#">
-            <span class="active">February</span>
-          </a>
-        </li>
-        <li>
-          <a href="#">
-            <span class="disabled">March</span>
-          </a>
-        </li>
-        <li>
-          <a href="#">April</a>
-        </li>
-        <li>
-          <a href="#">
-            <div class="promo">
-              <span class="disabled">May</span>
-            </div>
-          </a>
-        </li>
-        <li>
-          <a href="#">June</a>
-        </li>
-        <li>
-          <a href="#">July</a>
-        </li>
-        <li>
-          <a href="#">August</a>
-          <span class="disabled">My least favorite month</span>
-        </li>
-        <li>
-          <a href="#">September</a>
-        </li>
-      </ul>
-    </div>
-  </section>
-
+  <article>
+    <section>
+      <div class="month-list">
+        <ul>
+          <li>
+            <a href="#">January</a>
+            <span class="disabled">My favorite month</span>
+          </li>
+          <li>
+            <a href="#">
+              <span class="active">February</span>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <span class="disabled">March</span>
+            </a>
+          </li>
+          <li>
+            <a href="#">April</a>
+          </li>
+          <li>
+            <a href="#">
+              <div class="promo">
+                <span class="disabled">May</span>
+              </div>
+            </a>
+          </li>
+          <li>
+            <a href="#">June</a>
+          </li>
+          <li>
+            <a href="#">July</a>
+          </li>
+          <li>
+            <a href="#">August</a>
+            <span class="disabled">My least favorite month</span>
+          </li>
+          <li>
+            <a href="#">September</a>
+          </li>
+        </ul>
+      </div>
+    </section>
+  </article>
   <!--
     1. Make the "I'm red" text colored red
     2. Make the "I'm blue" text colored blue
